Bug 1841352: Added (compile-time) unit tests for TimeStamp and TimeStampValue r=florian

Differential Revision: https://phabricator.services.mozilla.com/D182676