mozglue/misc/TimeStamp.h
@@ -36,6 +36,7 @@ typedef uint64_t TimeStampValue;
 #endif
 
 class TimeStamp;
+class TimeStampTests;
 
 /**
  * Platform-specific implementation details of BaseTimeDuration.
@@ -271,7 +272,7 @@ class BaseTimeDuration {
   template <typename>
   friend class BaseTimeDuration;
 
-  static BaseTimeDuration FromTicks(int64_t aTicks) {
+  static constexpr BaseTimeDuration FromTicks(int64_t aTicks) {
     BaseTimeDuration t;
     t.mValue = aTicks;
     return t;
@@ -416,7 +417,7 @@ class TimeStamp {
   /**
    * Return true if this is the "null" moment
    */
-  bool IsNull() const { return mValue == 0; }
+  constexpr bool IsNull() const { return mValue == 0; }
 
   /**
    * Return true if this is not the "null" moment, may be used in tests, e.g.:
@@ -581,9 +582,9 @@ class TimeStamp {
  private:
   friend struct IPC::ParamTraits<mozilla::TimeStamp>;
   friend struct TimeStampInitialization;
+  friend class TimeStampTests;
 
-  MOZ_IMPLICIT
-  TimeStamp(TimeStampValue aValue) : mValue(aValue) {}
+  constexpr MOZ_IMPLICIT TimeStamp(TimeStampValue aValue) : mValue(aValue) {}
 
   static MFBT_API TimeStamp Now(bool aHighResolution);
 
